--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap");
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -80,4 +82,8 @@
       "rlig" 1,
       "calt" 1;
   }
+}
+
+body {
+  font-family: "Montserrat", sans-serif;
 }
